tests/machine/x/ocaml/inner_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/inner_join.ml", line 32, characters 53-57:
32 |         __res0 := { orderId = o.id; customerName = c.name; total = o.total } :: !__res0;
                                                          ^^^^
Error: This expression has type record2
       There is no field name within type record2


Context (around line 32):
  30 |     List.iter (fun c ->
  31 |       if (o.customerId = c.id) then (
  32 |         __res0 := { orderId = o.id; customerName = c.name; total = o.total } :: !__res0;
  33 |       )
  34 |     ) customers;
